--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -53,7 +53,9 @@
       <p class="single-text">
         <%= @blog.body %>
       </p>
- 
+      
+      <%= link_to "編集", edit_blog_path(@blog) %>
+
       <a href="#">編集</a>
       <a href="#">削除</a>
  
